# python-in-kestra

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
flows/: 01_git_clone.yaml  02_sync_namespace_files.yaml  04_use_shared_package.yaml
src/etl/: README.md  utils.py
