[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl"
version = "0.1.0"
description = "ETL utilities"
authors = [
    { name = "Kestra", email = "hello@kestra.io" }
]
readme = "src/etl/README.md"
license = { text = "Apache License 2.0" }
keywords = ["etl"]
urls = { "Homepage" = "https://github.com/example/etl" }
dependencies = [
    "kestra>=0.20.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["etl"]
